# kavanoz

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-version-test.yml
assets/: demo.tape
src/kavanoz/: core.py  debug_utils.py  plugin_loader.py  smali_regexes.py  unpack_plugin.py  utils.py
src/kavanoz/loader/: appsealing.py  coper.py  crocodile.py  crocodilus.py  kangapack.py  moqhao.py  multidex.py  multidex_header.py  old_rc4.py  pronlocker.py  rc4.py  sesdex.py  simple.py  simple_aes.py  simple_xor.py  simple_xor_zlib.py  simply_xor2.py  subapp.py
tests/: test.py
tests/test_apk/: coper.apk  coper2.apk  coper2_0.apk  coper2_1.apk  coper3_2.apk  crocodilus.apk  default_dex_protector.apk  dexprotector.apk  inflate.apk  inflate2.apk  kangapack.apk  loader_rc4_key_0.apk  loader_rc4_multiple_stage.apk  loader_rc4_second_key_0.apk  loader_rc4_static_key_in_key_class.apk  moqhao.apk  multidex_without_header.apk  multiple_rc4_init.apk  pronlocker.apk  protect_key_chines_manifest_without_zlib.apk  protect_key_chines_manifest_without_zlib2.apk  sesdex.apk  simple_first_100_byte.apk  simple_skip4_zlib_base64.apk  simple_xor2.apk  simple_xor_zlib_base64.apk  simpleaes.apk  simplexor.apk  subapp.apk
