[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kavanoz"
version = "0.0.1"
keywords = ["android","malware","unpacking","packer"]
license = {file="LICENSE"}
readme = "README.md"
description = "Unpacking framework for common android malware"
dependencies = [
    "androguard","arc4",
    'importlib-metadata; python_version<"3.8"',
]
authors = [
  {email = "eybisii@gmail.com"},
  {name = "Ahmet Bilal Can"}
]
maintainers = [
  {name = "Ahmet Bilal Can", email = "eybisii@gmail.com"}
]
[project.scripts]
kavanoz = "kavanoz.core:cli"


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
namespaces = true  # true by default
