[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kavanoz"
version = "0.0.2"
keywords = ["android","malware","unpacking","packer"]
license = {file="LICENSE"}
readme = "README.md"
description = "Unpacking framework for common android malware"
dynamic = ["dependencies"]
authors = [
  {email = "eybisii@gmail.com"},
  {name = "Ahmet Bilal Can"}
]
maintainers = [
  {name = "Ahmet Bilal Can", email = "eybisii@gmail.com"}
]
[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}
[project.scripts]
kavanoz = "kavanoz.core:cli"
[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
namespaces = true  # true by default
[tool.setuptools.package-data]
kavanoz = ["loader/androidnativeemu/libc.so"]
